# Default-Template

./: .env.example  .gitignore  CLAUDE.md  Goal.md  README.md  config.toml  pyproject.toml
Context/: create-prd.md  generate-tasks.md  process-task-list.md
aisos/: __init__.py  __main__.py  config.py  config_test.py  logging_setup.py  logging_setup_test.py
aisos/intelligence/: azure_openai.py  base.py  base_test.py  prompt_manager.py  prompt_manager_test.py  router.py  router_test.py  token_controller.py  token_controller_test.py
aisos/memory/: db.py  db_test.py  embeddings.py  procedural.py  procedural_test.py  semantic.py  semantic_test.py  short_term.py  short_term_test.py
aisos/observability/: audit_log.py  audit_log_test.py  cost_tracker.py  cost_tracker_test.py  trace.py  trace_test.py
aisos/orchestration/: event_bus.py  event_bus_test.py  loop_guard.py  loop_guard_test.py  orchestrator.py  orchestrator_test.py  planner.py  planner_test.py  registry.py  registry_test.py  state.py  state_test.py
aisos/prompts/: system.md
aisos/security/: hitl.py  hitl_test.py  rbac.py  rbac_test.py  sanitizer.py  sanitizer_test.py
aisos/tools/: base.py  (+4 more)
tasks/: 0001-prd-aisos-framework.md  tasks-0001-prd-aisos-framework.md
tests/: test_e2e.py
tools/: abuseipdb_tool.py  alienvault_tool.py  dangerous_demo_tool.py  echo_tool.py  log_analytics_describe_tool.py  log_analytics_describe_tool_test.py  log_analytics_tool.py  log_analytics_tool_test.py  nvd_tool.py  playbook_tool_test.py  run_playbook_tool.py  save_playbook_tool.py  virustotal_tool.py  web_search_tool.py
(+4 files in other folders)
