[project]
name = "aisos"
version = "0.1.0"
description = "AISOS — Agentic Intelligence Shell Operating System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "azure-identity>=1.25.3",
    "azure-monitor-query>=2.0.0",
    "langgraph>=1.2.0",
    "openai>=2.36.0",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlite-vec>=0.1.9",
    "textual>=8.2.6",
    "tiktoken>=0.12.0",
]

[project.scripts]
aisos = "aisos.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aisos"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["aisos", "tools", "tests"]
python_files = ["*_test.py", "test_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
